[tool.poetry]
name = "tronicsify"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain = "^0.2.2"
langchain-community = "^0.2.2"
pymongo = "^4.7.3"
langchain-google-genai = "^1.0.5"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
